[package]
name = "image-fetch"
version = "0.1.0"
edition = "2024"
description = "获取黑料,每日大赛,草榴的图片和视频地址"

[dependencies]
actix-web = "4"
reqwest = "0.12"
config = { version = "0.15.14", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
scraper = "0.24.0"
serde_json = "1.0"
moka = { version = "0.12.10", features = ["future"] }
regex = "1"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
